name:                ghcjs-react
version:             0.1.0.0
synopsis:            Yet another React binding for GHCJS
description:
license:             MIT
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.12

-- executable             react-demo
--   default-language:    Haskell2010
--   main-is:              demo/Main.hs
--   build-depends:        base,
--                         mtl,
--                         text,
--                         ghcjs-base,
--                         ghcjs-dom,
--                         ghcjs-react

flag development
  description:         Use unminified React sources with warnings and extended validations enabled
  manual:              False
  default:             False

flag addons
  description:         Use React version with addons included
  manual:              False
  default:             True

library
  default-language:    Haskell2010
  exposed-modules:     React,
                       React.DOM,
                       React.DOM.Utils
  if flag(addons)
     exposed-modules:  React.Addons
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && < 5,
                       ghcjs-base,
                       ghcjs-dom,
                       unordered-containers,
                       text,
                       transformers,
                       vector,
                       mtl,
                       template-haskell,
                       transformers-base,
                       monad-control
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(development) && flag(addons)
    js-sources:        js/react-with-addons.js,
                       js/react-dom.js,
                       js/wrappers.js

  if flag(development) && !flag(addons)
    js-sources:        js/react.js,
                       js/react-dom.js,
                       js/wrappers.js

  if !flag(development) && !flag(addons)
    js-sources:        js/react.min.js,
                       js/react-dom.min.js,
                       js/wrappers.js

  if !flag(development) && flag(addons)
    js-sources:        js/react-with-addons.min.js,
                       js/react-dom.min.js,
                       js/wrappers.js
  
